--- a/pom.xml
+++ b/pom.xml
@@ -23,18 +23,23 @@
 		</dependency>
 		<dependency>
 		    <groupId>com.typesafe.akka</groupId>
-		    <artifactId>akka-http_${akka.scala.version}</artifactId>
-		    <version>${akka.http.version}</version>
+		    <artifactId>akka-remote_${akka.scala.version}</artifactId>
+		    <version>${akka.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>com.typesafe.akka</groupId>
-		    <artifactId>akka-stream_${akka.scala.version}</artifactId>
+		    <artifactId>akka-cluster_${akka.scala.version}</artifactId>
 		    <version>${akka.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-http-jackson_${akka.scala.version}</artifactId>
-			<version>${akka.http.version}</version>
+			<artifactId>akka-cluster-metrics_${akka.scala.version}</artifactId>
+			<version>${akka.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-cluster-tools_${akka.scala.version}</artifactId>
+			<version>${akka.version}</version>
 		</dependency>
 		
 		
