something is not right

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,10 @@
 # https://github.com/akka/akka-samples/tree/2.5/akka-sample-cluster-java/src/main/java/sample/cluster/factorial
 
 akka {
-  loglevel = DEBUG
+  #loglevel = DEBUG
   actor {
-    provider = "akka.cluster.ClusterActorRefProvider"
+    #provider = "akka.cluster.ClusterActorRefProvider"
+    provider = "cluster"
   }
   remote {
     netty.tcp {
@@ -24,7 +25,7 @@ akka {
 
     # auto downing is NOT safe for production deployments.
     # you may want to use it during development, read more about it in the docs.
-    auto-down-unreachable-after = 10s
+    # auto-down-unreachable-after = 10s
   }
 }
 
