--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,8 @@
 akka {
   #loglevel = DEBUG
   actor {
-    #provider = "akka.cluster.ClusterActorRefProvider"
-    provider = "cluster"
+    provider = "akka.cluster.ClusterActorRefProvider"
+    #provider = "cluster"
   }
   remote {
     netty.tcp {
@@ -30,11 +30,11 @@ akka {
 }
 
 # Enable metrics extension in akka-cluster-metrics.
-akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
+# akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
 
 # Sigar native library extract location during tests.
 # Note: use per-jvm-instance folder when running multiple jvm on one host. 
-akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/native
+# akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/native
 
 
 
