--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 akka {
 	actor {
+		warn-about-java-serializer-usage = false
 		provider = "cluster"
 	}
 	remote {
@@ -12,6 +13,13 @@ akka {
 		seed-nodes = [
 			"akka.tcp://ClusterSystem@192.168.178.18:2551",
 			"akka.tcp://ClusterSystem@192.168.178.12:2552"]
+	}
+	serializers {
+		java = "akka.serialization.JavaSerializer"
+	}
+	serialization-bindings {
+		"org.akka.messages.FileMessage$FolderJob" = java
+		"java.io.Serializable" = java
 	}
 }
 
