strange things happening

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,16 @@ akka {
 	actor {
 		warn-about-java-serializer-usage = false
 		provider = "cluster"
+		serializers {
+			java = "akka.serialization.JavaSerializer"
+			proto = "akka.remote.serialization.ProtobufSerializer"
+		}
+		serialization-bindings {
+			"java.lang.String" = java
+			"com.google.protobuf.Message" = proto
+			"akka.actor.ActorSelectionMessage" = java
+			"org.akka.messages.FileMessage$FolderJob" = java
+		}
 	}
 	remote {
 		netty.tcp {
@@ -13,13 +23,6 @@ akka {
 		seed-nodes = [
 			"akka.tcp://ClusterSystem@192.168.178.18:2551",
 			"akka.tcp://ClusterSystem@192.168.178.12:2552"]
-	}
-	serializers {
-		java = "akka.serialization.JavaSerializer"
-	}
-	serialization-bindings {
-		"org.akka.messages.FileMessage$FolderJob" = java
-		"java.io.Serializable" = java
 	}
 }
 
