--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,17 +15,20 @@ akka {
 	}
 	remote {
 		netty.tcp {
-			hostname = "192.168.178.18"
+			hostname = "127.0.0.1"
+			# hostname = "192.168.178.18"
 			port = 0
 		}
 	}
 	cluster {
-		seed-nodes = [
-			"akka.tcp://ClusterSystem@192.168.178.18:2551",
-			"akka.tcp://ClusterSystem@192.168.178.12:2552"]
+		seed-nodes = 
+			["akka.tcp://ClusterSystem@127.0.0.1:2551",
+			"akka.tcp://ClusterSystem@127.0.0.1:2552"]
+			# ["akka.tcp://ClusterSystem@192.168.178.18:2551",
+			# "akka.tcp://ClusterSystem@192.168.178.12:2552"]
 	}
 }
 
 akka.log-dead-letters-during-shutdown = off
-akka.log-dead-letters = off
+akka.log-dead-letters = on
 akka.stdout-loglevel = off
