--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,16 +19,21 @@ akka {
 			# hostname = "192.168.178.18"
 			port = 0
 		}
+		artery {
+			enabled = on
+			canonical.hostname = "127.0.0.1"
+			canonical.port = 0
+		}
 	}
 	cluster {
 		seed-nodes = 
-			["akka.tcp://ClusterSystem@127.0.0.1:2551",
-			"akka.tcp://ClusterSystem@127.0.0.1:2552"]
+			["akka://ClusterSystem@127.0.0.1:2551",
+			"akka://ClusterSystem@127.0.0.1:2552"]
 			# ["akka.tcp://ClusterSystem@192.168.178.18:2551",
 			# "akka.tcp://ClusterSystem@192.168.178.12:2552"]
 	}
 }
 
 akka.log-dead-letters-during-shutdown = off
-akka.log-dead-letters = on
+akka.log-dead-letters = off
 akka.stdout-loglevel = off
