--- a/src/main/resources/file.conf
+++ b/src/main/resources/file.conf
@@ -1,11 +1,11 @@
 include "application"
 
 akka.actor.deployment {
-	/fileService/fileRouter {
-		router = consistent-hashing-group
-		routees.paths = ["user/fileParser"]
+	/fileService/singleton/fileRouter {
+		router = consistent-hashing-pool
 		cluster {
 			enabled = on
+			max-nr-of-instances-per-node = 3
 			allow-local-routees = on
 			use-role = compute
 		}
